--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,15 @@
 name: conformal
 dependencies:
-  pip=20.1.1
-  python=3.7.7
-  numpy=1.18.1
-  numpy-base=1.18.1
-  matplotlib=3.1.3
-  matplotlib-base=3.1.3
-  scipy=1.4.1
-  pytorch=1.4.0
-  torchvision=0.5.0
-  pandas=1.0.3
-  pillow=7.1.2
-  seaborn=0.10.1
-  tqdm=4.47.0
+  - pip=20.1.1
+  - python=3.7.7
+  - numpy=1.18.1
+  - numpy-base=1.18.1
+  - matplotlib=3.1.3
+  - matplotlib-base=3.1.3
+  - scipy=1.4.1
+  - pytorch=1.4.0
+  - torchvision=0.5.0
+  - pandas=1.0.3
+  - pillow=7.1.2
+  - seaborn=0.10.1
+  - tqdm=4.47.0
