--- a/experiments/.gitignore
+++ b/experiments/.gitignore
@@ -1,6 +1,9 @@
 # The .cache should be ignored
 .cache/
 
+# The data folder should be ignored
+data/ 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
